--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,120 @@
-.App {
+.nav-ul li{
+  display: inline-block;
+  padding: 10px;
+}
+
+.nav-ul li a{
+  color: #fff;
+  padding: 5px;
+  text-decoration: none;
+}
+
+.nav-ul {
+  padding: 5px;
+  margin: 0px;
+  background-color: skyblue;
+}
+
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+  width: 100%;
+  background-color: skyblue;
+}
+
+.register, .addProduct, .login {
+  margin-left: 30%;
+  margin-top: 80px;
+}
+
+.inputBox{
+  display: block;
+  margin: 25px;
+  padding: 7px;
+  width: 300px;
+  border: 1px solid skyblue;
+}
+
+.appButton{
+  margin: 25px;
+  padding: 10px;
+  width: 150px;
+  background-color: skyblue;
+  border: 1px solid;
+  cursor: pointer;
+}
+
+.nav-right{
+  text-align: right;
+}
+
+.navLogo{
+  width: 45px;
+  float: left;
+  border-radius: 50%;
+  margin-top: 3px;
+  margin-left: 20px;
+}
+.error{
+  color: red;
+  font-size: 16px;
+  display: block;
+  margin: -20px 0px 0px 25px;
+}
+
+.productList {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.productList ul{
+  margin: 0px;
+  padding: 0px;
+  /* list-style-type: none; */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* .productList ul li{
+  list-style-type: none;
+  display: inline-block;
+  padding: 10px;
+  margin: 0px;
+
+} */
+.listButton{
+  background-color: skyblue;
+  font-size: 18px;
+  border-radius: 5px;
+}
+.searchAddProduct{
+  display: inline-flex;
+  justify-content: space-between;
+  width: 70%;
+}
+.searchProductBox{
+  width: 400px;
+  margin: 20px;
+  height: 40px;
+  border: 1px solid skyblue;
+  padding-left: 20px;
+  display: inline;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.displayAddButton{
+  display: inline;
 }
 
-.App-link {
-  color: #61dafb;
+table{
+  margin-left: auto;
+  margin-right: auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+table, tr, td, th {
+  border: 1px solid skyblue;
+  border-collapse: collapse;
+}
+
+td,th{
+  width: 125px;
+  padding: 10px;
 }
